fixes #16997. Add quasi-transparent background color on SpinWheelSlot touch element, so the SpinWheel is usable on IE. Thanks Sebastien Brunot (IBM, CCLA).
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@31222 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/holodark/SpinWheel.css
+++ b/mobile/themes/holodark/SpinWheel.css
@@ -68,3 +68,10 @@
   height: 100%;
   z-index: 1;
 }
+.dj_ie .mblSpinWheelSlotTouch {
+  background-color: rgba(255, 255, 255, 0.01);
+}
+.dj_ie8 .mblSpinWheelSlotTouch {
+  background: white;
+  filter: alpha(opacity=0);
+}
