--- a/mobile/themes/iphone/SpinWheel.css
+++ b/mobile/themes/iphone/SpinWheel.css
@@ -68,6 +68,13 @@
   height: 100%;
   z-index: 1;
 }
+.dj_ie .mblSpinWheelSlotTouch {
+  background-color: rgba(255, 255, 255, 0.01);
+}
+.dj_ie8 .mblSpinWheelSlotTouch {
+  background: white;
+  filter: alpha(opacity=0);
+}
 /* iOS6 specific */
 .dj_ios6 .mblSpinWheelSlotLabelBlue {
   color: #0160f2;
