--- a/mobile/themes/windows/SpinWheel.css
+++ b/mobile/themes/windows/SpinWheel.css
@@ -82,6 +82,13 @@
   height: 100%;
   z-index: 1;
 }
+.dj_ie .mblSpinWheelSlotTouch {
+  background-color: rgba(255, 255, 255, 0.01);
+}
+.dj_ie8 .mblSpinWheelSlotTouch {
+  background: white;
+  filter: alpha(opacity=0);
+}
 .mblSpinWheel {
   background-image: none !important;
   border: none !important;
